updating job names for consistency

--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -663,7 +663,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
-      - IN: reqProc_repo_tag
+      #- IN: reqProc_repo_tag
       - IN: c7_x86_64_rep_lib_tag
       - IN: u14_x86_64_rep_lib_tag
       - IN: u16_x86_64_rep_lib_tag
@@ -718,7 +718,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
-      - IN: reqProc_repo_tag
+      #- IN: reqProc_repo_tag
       - IN: c7_x86_64_rep_lib_tag
       - IN: u14_x86_64_rep_lib_tag
       - IN: u16_x86_64_rep_lib_tag
@@ -771,7 +771,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
-      - IN: reqProc_repo_tag
+      #- IN: reqProc_repo_tag
       - IN: c7_x86_64_rep_lib_tag
       - IN: u14_x86_64_rep_lib_tag
       - IN: u16_x86_64_rep_lib_tag
@@ -824,7 +824,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
-      - IN: reqProc_repo_tag
+      #- IN: reqProc_repo_tag
       - IN: c7_x86_64_rep_lib_tag
       - IN: u14_x86_64_rep_lib_tag
       - IN: u16_x86_64_rep_lib_tag
@@ -877,7 +877,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
-      - IN: reqProc_repo_tag
+      #- IN: reqProc_repo_tag
       - IN: c7_x86_64_rep_lib_tag
       - IN: u14_x86_64_rep_lib_tag
       - IN: u16_x86_64_rep_lib_tag
@@ -930,7 +930,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
-      - IN: reqProc_repo_tag
+      #- IN: reqProc_repo_tag
       - IN: c7_x86_64_rep_lib_tag
       - IN: u14_x86_64_rep_lib_tag
       - IN: u16_x86_64_rep_lib_tag
@@ -983,7 +983,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
-      - IN: reqProc_repo_tag
+      #- IN: reqProc_repo_tag
       - IN: c7_x86_64_rep_lib_tag
       - IN: u14_x86_64_rep_lib_tag
       - IN: u16_x86_64_rep_lib_tag
@@ -1036,7 +1036,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
-      - IN: reqProc_repo_tag
+      #- IN: reqProc_repo_tag
       - IN: c7_x86_64_rep_lib_tag
       - IN: u14_x86_64_rep_lib_tag
       - IN: u16_x86_64_rep_lib_tag
@@ -1089,7 +1089,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
-      - IN: reqProc_repo_tag
+      #- IN: reqProc_repo_tag
       - IN: c7_x86_64_rep_lib_tag
       - IN: u14_x86_64_rep_lib_tag
       - IN: u16_x86_64_rep_lib_tag
@@ -1142,7 +1142,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
-      - IN: reqProc_repo_tag
+      #- IN: reqProc_repo_tag
       - IN: c7_x86_64_rep_lib_tag
       - IN: u14_x86_64_rep_lib_tag
       - IN: u16_x86_64_rep_lib_tag
@@ -1195,7 +1195,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
-      - IN: reqProc_repo_tag
+      #- IN: reqProc_repo_tag
       - IN: c7_x86_64_rep_lib_tag
       - IN: u14_x86_64_rep_lib_tag
       - IN: u16_x86_64_rep_lib_tag
