--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -664,10 +664,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: u14_x86_64_gcp_img_patch
@@ -719,10 +719,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -772,10 +772,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -825,10 +825,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -878,10 +878,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -931,10 +931,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -984,10 +984,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -1037,10 +1037,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -1090,10 +1090,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -1143,10 +1143,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -1196,10 +1196,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
