--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -634,10 +634,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: u16_x86_64_gcp_img_patch
@@ -689,10 +689,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
