--- a/shippable.yml
+++ b/shippable.yml
@@ -191,10 +191,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: w2k16_x86_64_gcp_img_patch
@@ -245,10 +245,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: prod_release
@@ -462,10 +462,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: baseami_patch
@@ -503,10 +503,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -534,10 +534,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -565,10 +565,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -596,10 +596,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -627,10 +627,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -658,10 +658,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -689,10 +689,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -720,10 +720,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -751,10 +751,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -782,10 +782,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -813,10 +813,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -844,10 +844,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -940,10 +940,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: u16baseami_patch
@@ -981,10 +981,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -1080,10 +1080,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: ami_bits_access
@@ -1134,10 +1134,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -1222,10 +1222,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - IN: prepami_repo
         switch: off
       - IN: c7baseami_patch
@@ -1264,10 +1264,10 @@ jobs:
       - IN: cexec_repo_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-      - IN: c7_x86_64_rep_lib_tag
-      - IN: u14_x86_64_rep_lib_tag
-      - IN: u16_x86_64_rep_lib_tag
-      - IN: u16_aarch64_rep_lib_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
