updating job names for consistency

--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -662,7 +662,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -717,7 +717,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -770,7 +770,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -823,7 +823,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -876,7 +876,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -929,7 +929,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -982,7 +982,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -1035,7 +1035,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -1088,7 +1088,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -1141,7 +1141,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -1194,7 +1194,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
