--- a/shippable.yml
+++ b/shippable.yml
@@ -189,7 +189,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -243,7 +243,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -333,7 +333,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: reqKick_repo_tag
       - IN: redis_dd_tag
@@ -460,7 +460,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -501,7 +501,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -532,7 +532,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -563,7 +563,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -594,7 +594,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -625,7 +625,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -656,7 +656,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -687,7 +687,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -718,7 +718,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -749,7 +749,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -780,7 +780,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -811,7 +811,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -842,7 +842,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -938,7 +938,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -979,7 +979,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -1078,7 +1078,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -1132,7 +1132,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -1220,7 +1220,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -1262,7 +1262,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
