--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -632,7 +632,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
@@ -687,7 +687,7 @@ jobs:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_tag
-      - IN: reqExec_repo_tag
+      #- IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
       - IN: u14repLib_x8664_tag
