--- a/shippable.yml
+++ b/shippable.yml
@@ -345,7 +345,7 @@ jobs:
       - IN: www_sh_tag
       - IN: mktg_sh_tag
       - IN: micro_sh_tag
-      - IN: nexec_sh_tag
+#      - IN: nexec_sh_tag
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
