--- a/shippable.yml
+++ b/shippable.yml
@@ -341,7 +341,7 @@ jobs:
       - IN: rabbitmq_dd_tag
       - IN: gitlab_dd_tag
       - IN: postgres_dd_tag
-      - IN: api_sh_tag
+#      - IN: api_sh_tag
       - IN: www_sh_tag
       - IN: mktg_sh_tag
       - IN: micro_sh_tag
