--- a/shippable.yml
+++ b/shippable.yml
@@ -342,8 +342,8 @@ jobs:
       - IN: gitlab_dd_tag
       - IN: postgres_dd_tag
 #      - IN: api_sh_tag
-      - IN: www_sh_tag
-      - IN: mktg_sh_tag
+#      - IN: www_sh_tag
+#      - IN: mktg_sh_tag
       - IN: micro_sh_tag
 #      - IN: nexec_sh_tag
       - TASK:
