updating job names for consistency

--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -391,7 +391,7 @@ jobs:
       - IN: c7cppall_x8664_tag
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -446,7 +446,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
