--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -661,7 +661,7 @@ jobs:
       - IN: u16microbase_x8664_tag
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -716,7 +716,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -769,7 +769,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -822,7 +822,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -875,7 +875,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -928,7 +928,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -981,7 +981,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -1034,7 +1034,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -1087,7 +1087,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -1140,7 +1140,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -1193,7 +1193,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
