--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -631,7 +631,7 @@ jobs:
       - IN: u16microbase_x8664_tag
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -686,7 +686,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
