--- a/shippable.yml
+++ b/shippable.yml
@@ -188,7 +188,7 @@ jobs:
       - IN: w2k16aspnetcore_x8664_tag
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -242,7 +242,7 @@ jobs:
     steps:
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -332,10 +332,10 @@ jobs:
       - IN: genExec_sh_tag
 #      - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-#      - IN: cexec_repo_tag
+#      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
-#      - IN: reqKick_repo_tag
+#      - IN: reqKick_repo_file_tag
       - IN: redis_dd_tag
       - IN: vault_dd_tag
       - IN: rabbitmq_dd_tag
@@ -459,7 +459,7 @@ jobs:
       - IN: u16microbase_x8664_tag
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -500,7 +500,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -531,7 +531,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -562,7 +562,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -593,7 +593,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -624,7 +624,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -655,7 +655,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -686,7 +686,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -717,7 +717,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -748,7 +748,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -779,7 +779,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -810,7 +810,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -841,7 +841,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -937,7 +937,7 @@ jobs:
       - IN: u16microbase_x8664_tag
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -978,7 +978,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -1077,7 +1077,7 @@ jobs:
       - IN: w2k16aspnetcore_x8664_tag
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -1131,7 +1131,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -1219,7 +1219,7 @@ jobs:
       - IN: c7cppall_x8664_tag
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
@@ -1261,7 +1261,7 @@ jobs:
         switch: off
       - IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_tag
+      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: c7repLib_x8664_tag
