--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -562,7 +562,7 @@ jobs:
     steps:
       - IN: u16_x86_64_gcp_img_prep
       - IN: node_sh_repo
-      - IN: cexec_sh_repo
+      - IN: cexec_sh_repo1
       - IN: u16reqProc_x8664_build
       - IN: prepami_repo
         switch: off
