--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -659,7 +659,7 @@ jobs:
       - IN: u16ruball_x8664_tag
       - IN: u16phpall_x8664_tag
       - IN: u16microbase_x8664_tag
-      - IN: execTemplates_repo_tag
+      #- IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -714,7 +714,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: execTemplates_repo_tag
+      #- IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -767,7 +767,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: execTemplates_repo_tag
+      #- IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -820,7 +820,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: execTemplates_repo_tag
+      #- IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -873,7 +873,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: execTemplates_repo_tag
+      #- IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -926,7 +926,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: execTemplates_repo_tag
+      #- IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -979,7 +979,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: execTemplates_repo_tag
+      #- IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -1032,7 +1032,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: execTemplates_repo_tag
+      #- IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -1085,7 +1085,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: execTemplates_repo_tag
+      #- IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -1138,7 +1138,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: execTemplates_repo_tag
+      #- IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -1191,7 +1191,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: execTemplates_repo_tag
+      #- IN: execTemplates_repo_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
