updating job names for consistency

--- a/shippable.yml
+++ b/shippable.yml
@@ -186,7 +186,7 @@ jobs:
       - IN: w2k16_x8664_tag
       - IN: w2k16dotnetcore_x8664_tag
       - IN: w2k16aspnetcore_x8664_tag
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -240,7 +240,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -330,7 +330,7 @@ jobs:
         switch: off
       - IN: genExec_dd_tag
       - IN: genExec_sh_tag
-#      #- IN: execTemplates_repo_tag
+#      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
 #      - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -457,7 +457,7 @@ jobs:
       - IN: u16ruball_x8664_tag
       - IN: u16phpall_x8664_tag
       - IN: u16microbase_x8664_tag
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -498,7 +498,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -529,7 +529,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -560,7 +560,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -591,7 +591,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -622,7 +622,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -653,7 +653,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -684,7 +684,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -715,7 +715,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -746,7 +746,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -777,7 +777,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -808,7 +808,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -839,7 +839,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -935,7 +935,7 @@ jobs:
       - IN: u16ruball_x8664_tag
       - IN: u16phpall_x8664_tag
       - IN: u16microbase_x8664_tag
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -976,7 +976,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -1075,7 +1075,7 @@ jobs:
       - IN: w2k16_x8664_tag
       - IN: w2k16dotnetcore_x8664_tag
       - IN: w2k16aspnetcore_x8664_tag
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -1129,7 +1129,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -1217,7 +1217,7 @@ jobs:
       - IN: c7pytall_x8664_tag
       - IN: c7javall_x8664_tag
       - IN: c7cppall_x8664_tag
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -1259,7 +1259,7 @@ jobs:
         switch: off
       - IN: ami_bits_access
         switch: off
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
