--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -629,7 +629,7 @@ jobs:
       - IN: u16ruball_x8664_tag
       - IN: u16phpall_x8664_tag
       - IN: u16microbase_x8664_tag
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
@@ -684,7 +684,7 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      #- IN: execTemplates_repo_tag
+      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqExec_repo_tag
